# fastapi-server-python

./: .gitignore  .gitlab-ci.yml  README.md  README_API.md  main.py  models.py  pants.toml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: pants.yaml
src/binance_api.egg-info/: PKG-INFO  SOURCES.txt
src/main/: __init__.py
src/optimus_terminal/: BUILD  models.py
src/optimus_terminal/entity/: __init__.py  entity_core.py
src/optimus_terminal/fast_api/: BUILD  main.py
src/optimus_terminal/logic/: logic_core.py
src/pythonNewsAPI/: __init__.py  langModel.py  main.py  polygon.py
tests/: conftest.py
tests/main/: test_entity.py
tests/optimus_terminal/: conftest.py  test_entity.py  test_fastapi.py
tests/pythonNewsAPI/: test_newsAPI.py
